--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "start": "next start"
   },
   "dependencies": {
+    "graphql-request": "^1.8.2",
     "next": "9.1.7",
     "react": "16.12.0",
-    "react-dom": "16.12.0"
+    "react-dom": "16.12.0",
+    "web3-utils": "^1.2.4"
   }
 }
